Fix pic width on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3153,6 +3153,12 @@
 		border-radius: 50%;
 	}
 
+	@media screen and (max-width: 480px) {
+		.profile-pic {
+			width: 310px;
+		}
+	}
+
 	.languages .icons {
 		font-size: 45.28px;
 	}
